retrieveUnpackaged/objects/NOFA__c.object
<CustomObject>
    <fields>
        <fullName>Notification_of_Intent_to_Apply_Required__c</fullName>
        <description>When the Notification of Intent to Apply field is checked the Notification of Intent to Apply button should display.</description>
        <label>Allow Notification of Intent to Apply</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <label>Other Required or Optional Documents</label>
        <picklist>
            <picklistValues>
                <fullName>Evaluation Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization_Docs__c</fullName>
        <label>Organization Docs</label>
        <picklist>
            <picklistValues>
                <fullName>1199 Direct Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor’s Statement Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Advisory Group Names &amp; Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governing Body Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Certification of Non-Profit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Union Concurrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Organizations/Sources Names</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated indirect cost agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor/Proj. Director Position Desc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor&apos;s Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Plan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>NOFAs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizational_Capability_CP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Organizational Capability </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizational_Capability__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Organizational Capability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NOFAs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_NCCC_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Other- NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_for_Focus_Areas_and_Objectives__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_other_section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_NOFA1__c</fullName>
        <formula>Parent_NOFA__r.Name</formula>
        <label>Parent NOFA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_NOFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent NOFA</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>State or Territory Commissions</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peer_Review_End_Date__c</fullName>
        <label>Review End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peer_Review_Start_Date__c</fullName>
        <label>Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_EO__c</fullName>
        <formula>Executive_officer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_POC__c</fullName>
        <formula>Point_of_contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of AR contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Point_of_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Point of contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Organization__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>NOFA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Phone1__c</fullName>
        <formula>Point_of_contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone2__c</fullName>
        <formula>Point_of_contact1__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Applicant_State_Commission_Name__c</fullName>
        <formula>$User.Organization_Names__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prime Applicant (State Commission) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <label>Program Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Design_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Program Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Management_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Program Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If your project is not found then add a new project under your Account.</inlineHelpText>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>NOFAs/RFPs</relationshipLabel>
        <relationshipName>NOFAs_RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Dates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_End_Date__c</fullName>
        <label>RFP End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Name__c</fullName>
        <label>RFP Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RFP_Start_Date__c</fullName>
        <label>RFP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In-Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open to Applicants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSVP_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSVP Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruitment_and_Development_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Recruitment and Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recruitment_and_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recruitment and Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Active_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Active Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <label>Required</label>
        <picklist>
            <picklistValues>
                <fullName>1199 Direct Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Articles of Incorporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor’s Statement Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Advisory Group Names &amp; Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Financial Report User Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Management Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit or SF-990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governing Body Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRS Certification of Non-Profit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labor Union Concurrence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters of Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Organizations/Sources Names</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logic Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated indirect cost agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Chart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recipient contact Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor/Proj. Director Position Desc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supervisor&apos;s Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Plan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Review_Cycle__c</fullName>
        <label>Review Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Rolling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Deadline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert or Blended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SCP_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCP Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S_N__c</fullName>
        <defaultValue>false</defaultValue>
        <label>S&amp;N</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_and_Security_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Safety and Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Safety_and_Security_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Safety and Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>School Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Date_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Site Date Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Site Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Type_and_Summer_Associates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Site Type and Summer Associates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_424__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Standard 424</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_CP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Information__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application.</description>
        <label>Standard Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Set up in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review in Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengthening_Communities_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Strengthening Communities </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strengthening_Communities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strengthening Communities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Applicant_Concept_Paper_Due_Date__c</fullName>
        <inlineHelpText>Only enter the date if the concept paper is required.</inlineHelpText>
        <label>Sub-Applicant Concept Paper Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Application_Due_Date__c</fullName>
        <inlineHelpText>This due date applies to sub-applicants.</inlineHelpText>
        <label>Sub-Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Budgets_for_Multi_Year_Grants__c</fullName>
        <label>Sub-Budgets for Multi-Year Grants</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_of_Accomplishments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary of Accomplishments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Populations_CP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Target Populations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Populations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Populations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_of_acceptance__c</fullName>
        <label>Term Of Acceptance</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tools_and_Equipment_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Tools and Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tools_and_Equipment_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Tools and Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Spending_Site__c</fullName>
        <label>USA Spending Site</label>
        <length>149</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_bands_on_review_consensus__c</fullName>
        <label>Use bands on review consensus</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_consensus_scores__c</fullName>
        <label>Use consensus scores</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VISTA_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VISTA Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VISTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VISTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veterans_Military_Families_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Veterans &amp; Military Families</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veterans_Military_Families_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Veterans &amp; Military Families</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application.</description>
        <label>Volunteer Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_10AM__c</fullName>
        <label>Year 10+</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_10__c</fullName>
        <label>Year 10+</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_1AM__c</fullName>
        <label>Year 1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <label>Year 1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2AM__c</fullName>
        <label>Year 2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <label>Year 2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>NOFA/RFP</label>
    <listViews>
        <fullName>Active_NOFAs</fullName>
        <booleanFilter>(1 AND 2 AND 3) OR (4 AND 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <columns>Corporate_Program__c</columns>
        <columns>Allow_Concept_Paper__c</columns>
        <columns>Concept_Paper_Due_Date__c</columns>
        <columns>Applications_due_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Allow_Concept_Paper__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Concept_Paper_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Applications_due_date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Allow_Concept_Paper__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>Application_Due_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Active NOFAs</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <columns>Status__c</columns>
        <columns>Concept_Paper_Due_Date__c</columns>
        <columns>Applications_due_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOFA__c.NOFA</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>State_Commission</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_NOFAs</fullName>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <columns>Allow_Concept_Paper__c</columns>
        <columns>Concept_Paper_Due_Date__c</columns>
        <columns>NOFA_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Corporate_Program__c</columns>
        <filterScope>Everything</filterScope>
        <label>All NOFAs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>State_Commission</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Expired_NOFAs</fullName>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applications_due_date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Expired NOFAs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Grantee_Portal</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_NOFAs</fullName>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <columns>Corporate_Program__c</columns>
        <columns>Concept_Paper_Due_Date__c</columns>
        <columns>Applications_due_date__c</columns>
        <columns>Allow_Prime_Applicants_and_Sub_Applicant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NOFA_Active_Inactive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOFA__c.NOFA,NOFA__c.NOFA_Application,NOFA__c.NOFA_Concept_Paper</value>
        </filters>
        <label>Open NOFAs</label>
    </listViews>
    <listViews>
        <fullName>Prime_Applications</fullName>
        <columns>NAME</columns>
        <columns>NOFA_name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Applications_due_date__c</columns>
        <columns>Parent_NOFA__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Parent_NOFA1__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Prime Applications</label>
    </listViews>
</CustomObject>